<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >
  <include layout="@layout/view_action_bar"/>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/dp_16"
      android:layout_marginTop="@dimen/dp_48"
      android:text="@string/str_car_basic_info"
      android:textColor="@color/color_text_gray"
      android:textSize="@dimen/sp_16"
      />

  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/dp_16"
      android:layout_marginRight="@dimen/dp_16"
      android:layout_marginTop="@dimen/dp_8"
      app:cardCornerRadius="@dimen/dp_2"
      app:cardElevation="@dimen/dp_1"
      app:contentPadding="@dimen/dp_16"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <EditText
          android:id="@+id/activity_bind_car_car_num_input"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_56"
          android:background="@null"
          android:hint="@string/str_bind_car_num"
          android:singleLine="true"
          android:textColor="@color/color_text_gray"
          android:textCursorDrawable="@drawable/cursor"
          android:textSize="@dimen/sp_16"
          />
      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_1"
          android:background="@color/color_divider"
          />
      <EditText
          android:id="@+id/activity_bind_car_device_id"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_56"
          android:background="@null"
          android:hint="@string/str_bind_input_device"
          android:text="120219261401"
          android:singleLine="true"
          android:textColor="@color/color_text_gray"
          android:textCursorDrawable="@drawable/cursor"
          android:textSize="@dimen/sp_16"
          />
    </LinearLayout>
  </android.support.v7.widget.CardView>

  <Button
      android:id="@+id/activity_unbind_car_next"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dp_48"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="@dimen/dp_40"
      android:layout_marginLeft="@dimen/dp_16"
      android:layout_marginRight="@dimen/dp_16"
      android:layout_marginTop="@dimen/dp_56"
      android:background="@drawable/round_button_black"
      android:text="@string/str_next"
      android:textColor="@android:color/white"
      style="?android:attr/borderlessButtonStyle"
      />
</LinearLayout>