<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back_color"
    android:fitsSystemWindows="true"
    >
  <include layout="@layout/view_action_bar"/>

  <android.support.v7.widget.CardView
      android:id="@+id/activity_login_main_lay"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/dp_16"
      android:layout_marginRight="@dimen/dp_16"
      android:layout_marginTop="@dimen/dp_176"
      app:cardCornerRadius="@dimen/dp_8"
      app:cardElevation="@dimen/dp_0"
      app:contentPadding="@dimen/dp_8"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_8"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_60"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          >
        <ImageView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:scaleType="centerInside"
            android:src="@mipmap/phone_num"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_16"
            android:background="@android:color/transparent"
            android:hint="@string/str_login_phone"
            android:textSize="@dimen/sp_14"
            />
      </LinearLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_1"
          android:background="@color/main_back_color"
          />
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_60"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          >
        <ImageView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:scaleType="centerInside"
            android:src="@mipmap/password_edit"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="请输入密码"
            android:password="true"
            android:textSize="@dimen/sp_14"
            />
        <Button
            android:layout_width="@dimen/dp_96"
            android:layout_height="@dimen/dp_24"
            android:background="@drawable/round_button_white"
            android:text="@string/str_get_verify_code"
            android:textSize="@dimen/sp_12"
            android:visibility="gone"
            style="?android:attr/borderlessButtonStyle"
            />
      </LinearLayout>
    </LinearLayout>
  </android.support.v7.widget.CardView>

  <Button
      android:id="@+id/activity_login_btn"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dp_48"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="@dimen/dp_40"
      android:layout_marginLeft="@dimen/dp_16"
      android:layout_marginRight="@dimen/dp_16"
      android:background="@drawable/round_button_black"
      android:text="@string/str_login_btn"
      android:textColor="@android:color/white"
      style="?android:attr/borderlessButtonStyle"
      />
</RelativeLayout>